Changelog
=========

1.1-dev0 - (unreleased)
---------------------------

1.0 - (2020-11-25)
-----------------------

* Expose workflow progress via RestAPI
  [@avoinea refs #124586]