@@ -11,7 +11,7 @@
     <implements interface="eea.progress.workflow.interfaces.IWorkflow" />
   </class>
 
-  <class class="plone.dexterity.content.Container">
+  <class class="plone.dexterity.content.DexterityContent">
     <implements interface="eea.progress.workflow.interfaces.IBaseObject" />
   </class>
 
